fix scrollbar gutter

--- a/apps/app/src/styles/tailwind.css
+++ b/apps/app/src/styles/tailwind.css
@@ -75,6 +75,12 @@
 	.border-aside {
 		border-image: linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.08) 50%, transparent) 100;
 	}
+
+	@supports (scrollbar-gutter: stable) {
+		.scrollbar-gutter-stable {
+			scrollbar-gutter: stable;
+		}
+	}
 }
 .question-content pre[class*="language-"]::before,
 .question-content pre[class*="language-"]::after {
